# kgout

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
kgout/: __init__.py  core.py  utils.py  watcher.py
kgout/destinations/: __init__.py  base.py  gdrive.py  local.py
tests/: test_core.py  test_watcher.py
